# ren-backend

./: .editorconfig  .env.example  .env.test  .eslintrc.js  .gitignore  .travis.yml  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  ormconfig.json  package-lock.json  package.json  tsconfig.json  tslint.json
docs/: auth.md  index.md  series.md  users.md
src/: db.ts  index.ts  main.rs  utils.ts
src/controllers/: index.rs  mod.rs  not_found.rs  series.rs  status.rs
src/entity/: Category.ts  Episode.ts  Genre.ts  Season.ts  Series.ts  SeriesState.ts  User.ts  WatchList.ts
src/entity/series/: Category.ts  Episode.ts  Genre.ts  Season.ts  Series.ts  SeriesState.ts
src/lib/: db.rs
src/models/: mod.rs  series.rs
src/models/api/: series.rs
src/routes/v1/: index.ts
src/routes/v1/auth/: index.ts
src/routes/v1/middlewares/: isAuthorized.ts  logger.ts
src/routes/v1/series/: index.ts
src/routes/v1/user/: index.ts
src/schema/auth/: authLoginSchema.ts  authRegisterSchema.ts
src/schema/series/: createSeriesSchema.ts  getSeriesByIdSchema.ts
src/schema/watchlist/: modifyWatchListSchema.ts
src/services/: AuthService.ts  BaseService.ts  SeriesService.ts  UserService.ts  UsersService.ts  WatchListService.ts
src/utils/: authUtils.ts  conn.ts  error_messages.ts
test/: auth.spec.ts  categories.spec.ts  category.spec.ts  genres.spec.ts  series.spec.ts  users.spec.ts  utils.ts
test/__mocks__/: seriesPost.json  seriesPostResponse.json
test/__mocks__/post/: categories-req.json  episode-req.json  genres-req.json  series-req.json
(+5 files in other folders)
